added cobol module
cobol module developed for master-thesis.

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
     </dependencyManagement>
 
     <modules>
+    	<module>gutta-apievolution-cobol</module>
         <module>gutta-apievolution-core</module>
         <module>gutta-apievolution-dsl</module>
         <module>gutta-apievolution-java-codegen-plugin</module>
